# testx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  mkdocs.yml  release-plz.toml
.githooks/: pre-commit
.github/: CODING_GUIDELINES.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/: detection.rs  output.rs  overhead.rs  parsing.rs
demo/: demo.tape
docs/: changelog.md  cli.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: caching.md  configuration.md  history.md  impact-analysis.md  output-formats.md  picker.md  plugins.md  sharding.md  stress-testing.md  workspace.md
docs/languages/: index.md
npm/: README.md  install.js  package.json
src/: cache.rs  completions.rs  config.rs  error.rs  events.rs  filter.rs  hash.rs  impact.rs  lib.rs  main.rs  parallel.rs  picker.rs  retry.rs  runner.rs  sharding.rs  stress.rs  workspace.rs
src/adapters/: cpp.rs  dotnet.rs  elixir.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  util.rs  zig.rs
src/coverage/: display.rs  mod.rs
src/coverage/parsers/: cobertura.rs  go_cover.rs  jacoco.rs  lcov.rs  mod.rs
src/detection/: mod.rs
src/history/: analytics.rs  display.rs  mod.rs
src/output/: mod.rs
src/plugin/: mod.rs  script_adapter.rs
src/plugin/reporters/: github.rs  html.rs  markdown.rs  mod.rs  notify.rs
src/watcher/: debouncer.rs  file_watcher.rs  glob.rs  mod.rs  runner.rs  terminal.rs
tests/: cli.rs  integration.rs
tests/integration/: config.rs  custom_adapter.rs  filtering.rs  output_formats.rs  retry.rs
