[package]
name = "testx"
version = "0.1.0"
edition = "2024"
description = "One command. Any language. Beautiful tests."
license = "MIT"
repository = "https://github.com/bibekblockchain/testx"
keywords = ["testing", "test-runner", "cli", "developer-tools"]
categories = ["development-tools::testing", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
which = "8.0.2"
toml = "0.8"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.27.0"
