[package]
name = "testx-cli"
version = "0.2.0"
edition = "2024"
description = "One command. Any language. Beautiful tests."
license = "MIT"
repository = "https://github.com/whoisdinanath/testx"
homepage = "https://github.com/whoisdinanath/testx"
readme = "README.md"
keywords = ["testing", "test-runner", "cli", "developer-tools"]
categories = ["development-tools::testing", "command-line-utilities"]
exclude = ["sandbox/", "reps/", ".testx/", "npm/"]

[[bin]]
name = "testx"
path = "src/main.rs"

[lib]
name = "testx"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6"
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
which = "8.0.2"
toml = "0.8"
notify = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
predicates = "3.1"
tempfile = "3.27.0"

[[bench]]
name = "detection"
harness = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "output"
harness = false

[[bench]]
name = "overhead"
harness = false

# ── Build profiles ──────────────────────────────────────────
[profile.dev]
debug = 0                  # Skip debuginfo → ~15% faster link, smaller binary

[profile.dev.package."*"]
opt-level = 1              # Optimise deps (not your code) → faster runtime

[profile.release]
opt-level = "z"            # Optimise for size (smaller binary)
lto = "thin"               # Inter-crate optimisation
strip = true               # Strip symbols automatically
codegen-units = 1          # Better optimisation at cost of compile time
panic = "abort"            # Smaller binary — no unwinding tables
